[package]
name = "bls-signatures-evm"
version = "0.1.0"
edition = "2024"
license = "MIT"
keywords = ["bls", "signatures", "evm", "crypto"]
categories = ["cryptography", "mathematics"]
description = "Implementation of BLS signatures in Rust for the EVM"
repository = "https://github.com/xevisalle/bls-signatures-evm"

[dependencies]
bls12_381 = "0.8.0"
sha3 = "0.10.8"
rand = "0.8.5"
ff = "0.13.1"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "bls_signatures"
harness = false
